--- a/tnledger_courts/tn ledger courts.ipynb
+++ b/tnledger_courts/tn ledger courts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a8374f9d",
    "metadata": {
     "scrolled": true
@@ -12,17 +12,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK {'from': '2022-09-02 15:20:02', 'Calendar': ''}\n",
-      "09/02/2022\n"
+      "OK {'from': '2022-12-09 00:41:06', 'Calendar': ''}\n",
+      "12/09/2022\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fagho\\AppData\\Local\\Temp\\ipykernel_820\\349952461.py:62: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\Techistan\\AppData\\Local\\Temp\\ipykernel_10464\\3805447109.py:62: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver1 = webdriver.Chrome(ChromeDriverManager().install())\n",
-      "C:\\Users\\fagho\\AppData\\Local\\Temp\\ipykernel_820\\349952461.py:63: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\Techistan\\AppData\\Local\\Temp\\ipykernel_10464\\3805447109.py:63: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -30,43 +30,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CHEATHAM\n",
-      "AT ASHLAND CITY\n",
-      "Patricia Darlene Walz\n",
-      "|Gerald Frank Walz\n",
-      "Shane K. McNeill\n",
-      "['CHEATHAM', 'AT ASHLAND CITY', 'Patricia Darlene Walz', '|Gerald Frank Walz', 'Shane K. McNeill']\n",
-      "Raymond F. Runyon\n",
-      "['MONTGOMERY', 'Clarksville, TN 37040', 'Johnny Caroll Wilson', '|Alice Marie Tripp - Administratrix', 'Raymond F. Runyon']\n",
-      "John W. Crow II\n",
-      "['MONTGOMERY', 'Clarksville, TN 37040', 'John David Puckett', '|Mirela Tolontan - Administratrix', 'John W. Crow II']\n",
-      "Albert P. Marks\n",
-      "['MONTGOMERY', 'Clarksville, TN 37041-1149', 'Charles L. Leavell', '|Linda T. Wall and Diane T. Wamble - Co-Executrix', 'Albert P. Marks']\n",
-      "R. Mitchell Ross\n",
-      "['MONTGOMERY', 'Clarksville, TN 37041-0925', 'Kenneth E. Johnson', '|Zachary Hilan Johnson - Executor', 'R. Mitchell Ross']\n",
       "DAVIDSON COUNTY whole data going to csv.\n",
-      "Brittani B. Dial\n",
-      "['MONTGOMERY', 'Clarksville, TN 37040', 'Dorothey Stowe Thomas', '|Nathaniel M. Stowe II - Executor', 'Brittani B. Dial']\n",
+      "\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Barbara J. Johnson', '|Dominique Bishop - Executor', '']\n",
+      "\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Dale Edward Collier', '', '']\n",
+      "Caroline Brink\n",
+      "['MONTGOMERY', 'Clarksville, TN 37041-1334', 'Mary Nell Proffit', '|Jennifer L. Cox - Executrix', 'Caroline Brink']\n",
+      "John Crow\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Paul Christopher Scott', '|Melanie Krishnamurthy - Co-Administratrix/CTA|Mechelle Quantz - Co-Administratrix/CTA', 'John Crow']\n",
+      "Michael W. Dale\n",
+      "['MONTGOMERY', 'Clarksville, TN 37041', 'Fannie Smith Barrett', '|Terri B. Pulley - Co-Executrix|Tayloe B. Jackson - Co-Executrix', 'Michael W. Dale']\n",
+      "Raymond Runyon\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Jo Ann McEvoy', '|Kelly Scott McEvoy - Executor', 'Raymond Runyon']\n",
+      "Alexander Fasching\n",
+      "['MONTGOMERY', 'Brentwood, TN 37027', 'Richard W. Smith', '|Lucinda M. Smith - Administratrix', 'Alexander Fasching']\n",
+      "Thomas N. Bateman\n",
+      "['MONTGOMERY', 'Clarksville, TN 37041', 'Retha Dolores Settle', '|Retha Gail Clark - Co-Executrix|John David Settle - Co-Executor', 'Thomas N. Bateman']\n",
+      "Alexander Fasching\n",
+      "['MONTGOMERY', 'Brentwood, TN 37027', 'Clarence Richard Krebs', '|Cornelia E. Krebs-Plummer - Executrix', 'Alexander Fasching']\n",
       "CHEATHAM\n",
       "AT ASHLAND CITY\n",
-      "Floy Bell Perry\n",
-      "|Kimberly D. Look\n",
-      "Margaret Brady-Wilkerson\n",
-      "['CHEATHAM', 'AT ASHLAND CITY', 'Floy Bell Perry', '|Kimberly D. Look', 'Margaret Brady-Wilkerson']\n",
+      "Dovie Rogers Kirby\n",
+      "|Martha Kirby\n",
+      "Jennifer Noe\n",
+      "['CHEATHAM', 'AT ASHLAND CITY', 'Dovie Rogers Kirby', '|Martha Kirby', 'Jennifer Noe']\n",
       "CHEATHAM\n",
       "AT ASHLAND CITY\n",
-      "Robert David Story\n",
-      "|Micheal Todd Story\n",
-      "Margaret Brady-Wilkerson\n",
-      "['CHEATHAM', 'AT ASHLAND CITY', 'Robert David Story', '|Micheal Todd Story', 'Margaret Brady-Wilkerson']\n",
-      "Katie B. Klinghard\n",
-      "['MONTGOMERY', 'Clarksville, TN 37040', 'Betty Jean Bumpus', '|Lenora Clark - Executrix', 'Katie B. Klinghard']\n",
-      "John W. Crow II\n",
-      "['MONTGOMERY', 'Clarksville, TN 37040', 'Florence Mary Rodriguez', '|Sophia Aundraya Rodriguez - Administratrix', 'John W. Crow II']\n",
-      "Joel D. Ragland\n",
-      "['MONTGOMERY', 'Clarksville, TN 37040', 'Jack T. Irwin', '|Kellie A. Jackson - Executrix', 'Joel D. Ragland']\n",
-      "R. Mitchell Ross\n",
-      "['MONTGOMERY', 'Clarksville, TN 37040', 'Bettye J. Shoulta', '|Lisa Hester - Executrix', 'R. Mitchell Ross']\n",
+      "Richard Eldridge Biggs\n",
+      "|Helen Regina Roberts\n",
+      "Rhonda Meyers\n",
+      "['CHEATHAM', 'AT ASHLAND CITY', 'Richard Eldridge Biggs', '|Helen Regina Roberts', 'Rhonda Meyers']\n",
+      "CHEATHAM\n",
+      "AT ASHLAND CITY\n",
+      "Randolph \"Randy\" Gary Fleming\n",
+      "|Terry Pendleton\n",
+      "Eric K. Lockert\n",
+      "['CHEATHAM', 'AT ASHLAND CITY', 'Randolph \"Randy\" Gary Fleming', '|Terry Pendleton', 'Eric K. Lockert']\n",
+      "Steve Greer\n",
+      "['MONTGOMERY', 'Paris, TN 38242', 'Brian Floyd Roosa', '|Kathy Anne Taylor - Executrix', 'Steve Greer']\n",
+      "John E. Langford\n",
+      "['MONTGOMERY', 'Cookeville, TN 38501', 'Benny Deffendoll', '|Patricia L. Davis - Executrix', 'John E. Langford']\n",
+      "Daniel Ufford\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Joseph David Oliver', '|Lillian Patricia Watson - Executrix', 'Daniel Ufford']\n",
+      "Raymond F. Runyon\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Mary T. Davis', '|Gary Davis - Co-Executor|James Davis - Co-Executor', 'Raymond F. Runyon']\n",
+      "Lauren Meadows\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'David Lee Dodd', '|Veronica Lee Dodd Oldfield - Executrix', 'Lauren Meadows']\n",
+      "Katie Klinghard\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Dorothy Jean Johnson', '|Susan Renee Haines - Executor', 'Katie Klinghard']\n",
+      "John Crow\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Arric Austin', '|Zaiveus Austin - Executor', 'John Crow']\n",
+      "Caroline Brink\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Sandra R. Cunningham', '|Angelique Logue - Administratrix', 'Caroline Brink']\n",
+      "Raymond Runyon\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Bruce E. Wilson', '|Russell H. Wilson - Executor', 'Raymond Runyon']\n",
+      "Steven Girsky\n",
+      "['MONTGOMERY', 'Clarksville, TN 37040', 'Denica Alicia Adams', '|Jean Algretta Smith - Executrix', 'Steven Girsky']\n",
       "Hey Angel, scraping is done. You can now close this terminal\n"
      ]
     }
@@ -263,8 +283,9 @@
     "                            executors=executors.strip()\n",
     "                            print(executors)\n",
     "                    print([county_name,city,estate_of,executors,attorney])  \n",
-    "                    if executors[0] == '|':\n",
-    "                        executors = executors[1:]\n",
+    "                    if executors.strip()!='':\n",
+    "                        if executors[0] == '|':\n",
+    "                            executors = executors[1:]\n",
     "                    cheatham_county_data.append([city,estate_of,executors,attorney])\n",
     "                    \n",
     "                if probate_status==True and montgomery_status==True:\n",
@@ -290,9 +311,10 @@
     "                        if 'deputy' in i.lower():\n",
     "                            city=(extracted_text[extracted_text.index(i)-1])\n",
     "                    print([county_name,city,estate_of,executors,attorney])\n",
-    "                    if executors[0] == '|':\n",
-    "                        executors = executors[1:]\n",
-    "                    executors = executors.split('-')[0]\n",
+    "                    if executors.strip()!='':\n",
+    "                        if executors[0] == '|':\n",
+    "                            executors = executors[1:]\n",
+    "                        executors = executors.split('-')[0]\n",
     "                    montgomery_county_data.append([city,estate_of,executors,attorney])\n",
     "    driver1.close()\n",
     "\n",
@@ -448,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a12d07",
+   "id": "95d938c8",
    "metadata": {},
    "outputs": [],
    "source": []
