--- a/tn courts.ipynb
+++ b/tn courts.ipynb
@@ -2,127 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d8902161",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "START {'mon': True, 'rut': False, 'rob': False, 'sum': False, 'will': False, 'wil': False, 'gen': False, 'cir': True, 'from': '2022-10-01 16:31:32', 'Calendar1': '', 'to': '2022-10-05 16:31:34', 'Calendar2': '', 'user': '', 'pass': ''}\n",
-      "2022\n",
-      "2022\n",
-      "montgomery\n",
-      "Circuit Court\n",
-      "\n",
-      "\n",
-      "False\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fagho\\AppData\\Local\\Temp\\ipykernel_16504\\1251454859.py:107: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gathering Links...\n",
-      "Extracting Plaintiffs...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fagho\\AppData\\Local\\Temp\\ipykernel_16504\\1251454859.py:144: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME: Clarissa Monique Soliz, CASE STYLE : Clarissa Monique Soliz vs Brian Anthony Escobar, DATE: Oct 04 2022, ADDRESS: -, TYPE: Divorce - NO Children, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Brett Andre LaGore, CASE STYLE : Brett Andre LaGore vs Shannon Lynn LaGore, DATE: Oct 03 2022, ADDRESS: -, TYPE: Divorce with Minor Children, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Abigail O Orusa, CASE STYLE : Samson K Orusa (et. al) vs Legends Bank, DATE: Oct 04 2022, ADDRESS: -, TYPE: -, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Samson K Orusa, CASE STYLE : Samson K Orusa (et. al) vs Legends Bank, DATE: Oct 04 2022, ADDRESS: -, TYPE: Category 1 Filing || Civil Summons, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Bradley J Lambert, CASE STYLE : Bradley J Lambert vs Johnathan D Hout (et. al), DATE: Oct 03 2022, ADDRESS: -, TYPE: Civil Summons || Civil Summons || Damage And Torts, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Antonio Hendricks, CASE STYLE : Antonio Hendricks vs Christen Hendricks, DATE: Oct 03 2022, ADDRESS: -, TYPE: Divorce - NO Children, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Elissa Tiera Moore McNair, CASE STYLE : Elissa Tiera Moore McNair vs Khalil Koran McNair, DATE: Oct 03 2022, ADDRESS: -, TYPE: Divorce - NO Children, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Jose Antonio Macias, CASE STYLE : Jose Antonio Macias vs Javier Zuno, DATE: Oct 03 2022, ADDRESS: -, TYPE: Divorce - NO Children, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Wyatt Alford Brandt, CASE STYLE : Wyatt Alford Brandt vs Tangela Chimere Brandt, DATE: Oct 03 2022, ADDRESS: -, TYPE: Divorce with Minor Children, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Salele Iosefo, CASE STYLE : Shelly Iosefo (et. al) vs Lynn K Dejesus (et. al), DATE: Oct 03 2022, ADDRESS: -, TYPE: -, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Shelly Iosefo, CASE STYLE : Shelly Iosefo (et. al) vs Lynn K Dejesus (et. al), DATE: Oct 03 2022, ADDRESS: -, TYPE: Civil Summons || Damage And Torts, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Kodie Boshell, DATE: Aug 15 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Alexis Hernandez, DATE: Aug 12 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Amy Shepard, DATE: Aug 12 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Susan Marie Leisentritt, DATE: Aug 12 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Linda Thompson, DATE: Jul 22 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare Clarksville, CASE STYLE : Tennova Healthcare Clarksville vs Steven Forge, DATE: Jul 22 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Johana Aranapideda, DATE: Jul 22 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Kelicia Weatherspoon, DATE: Jul 15 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Brandon Alsup, DATE: Jul 15 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare, CASE STYLE : Tennova Healthcare vs Nicoya Rolle, DATE: May 20 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare, CASE STYLE : Tennova Healthcare vs Jamecia Betty, DATE: May 20 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare, CASE STYLE : Tennova Healthcare vs Kaylee Grigg, DATE: May 20 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n",
-      "NAME: Tennova Healthcare-Clarksville, CASE STYLE : Tennova Healthcare-Clarksville vs Dennis J. Hampton, DATE: May 02 2022, ADDRESS: -, TYPE: Hospital Lien Filed || Hospital Lien Released, DETAILS: -\n",
-      "--------------------------------------------------\n",
-      "\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
@@ -240,7 +125,12 @@
     "            courts_login()\n",
     "\n",
     "        driver.find_element(By.ID, 'ddlCourt').send_keys(mode)\n",
-    "        driver.find_element(By.LINK_TEXT, 'Civil').click()\n",
+    "        try:\n",
+    "            driver.find_element(By.LINK_TEXT, 'Civil').click()\n",
+    "        except:\n",
+    "            driver.find_element(By.ID, 'ddlCourt').send_keys('General Sessions Civil')\n",
+    "            driver.find_element(By.LINK_TEXT, 'Civil').click()\n",
+    "\n",
     "        driver.find_element(By.LINK_TEXT, 'Search by Case Number').click()\n",
     "\n",
     "        links = []\n",
@@ -460,13 +350,14 @@
     "                            range=f\"{sheet_name2}!A1\", valueInputOption=\"USER_ENTERED\", body={\"values\":divorce_detainer}).execute()\n",
     "\n",
     "        except HttpError as err:\n",
-    "            print(err)"
+    "            print(err)\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d12163b",
+   "id": "8dd24405",
    "metadata": {},
    "outputs": [],
    "source": []
