--- a/tn courts.ipynb
+++ b/tn courts.ipynb
@@ -164,8 +164,12 @@
     "                courts_login()\n",
     "\n",
     "            driver.find_element(By.ID, 'ddlCourt').send_keys(mode)\n",
-    "            driver.find_element(By.LINK_TEXT, 'Civil').click()\n",
-    "            \n",
+    "            try:\n",
+    "                driver.find_element(By.LINK_TEXT, 'Civil').click()\n",
+    "            except:\n",
+    "                driver.find_element(By.ID, 'ddlCourt').send_keys('General Sessions Civil')\n",
+    "                driver.find_element(By.LINK_TEXT, 'Civil').click()\n",
+    "\n",
     "            for link in j:\n",
     "                driver.get(link)\n",
     "                try:\n",
@@ -357,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd24405",
+   "id": "f977e46a",
    "metadata": {},
    "outputs": [],
    "source": []
